Add print only to TOC. Add print only to CSS mark up outside media queries.

--- a/0_BasicFluid-ResponsiveWebsiteTemplate/css/style.css
+++ b/0_BasicFluid-ResponsiveWebsiteTemplate/css/style.css
@@ -15,6 +15,7 @@ Description: ???
 - aside sidebar content
 - footer
 - media queries
+- print only_thank you_contact us
 ------ */
 
 
@@ -619,6 +620,13 @@ main blockquote {
 
 .copyRight a:hover {
     color: #ABB7B7;
+}
+
+
+/* print only_thank you_contact us */
+
+#printed-article {
+    display: none;
 }
 
 
