Add additional bootstrap classes to markup for possible 'overwrite ' of bootstrap classes in custom css.

--- a/0_BasicBootstrapWebsiteTemplate/css/style.css
+++ b/0_BasicBootstrapWebsiteTemplate/css/style.css
@@ -28,3 +28,19 @@ nav {}
 .container-fluid {}
 
 .navbar-header {}
+
+.navbar-toggle .collapsed {}
+
+.navbar-brand {}
+
+.collapse .navbar-collapse {}
+
+.nav .navbar-nav {}
+
+.dropdown {}
+
+.dropdown-toggle {}
+
+.dropdown-menu {}
+
+.
