--- a/0_BasicBootstrapWebsiteTemplate/css/style.css
+++ b/0_BasicBootstrapWebsiteTemplate/css/style.css
@@ -34,6 +34,22 @@ Description: ???
 
 .container {}
 
+.padTop-1em {
+    margin-top: 1em;
+}
+
+.padTop-2em {
+    margin-top: 2em;
+}
+
+.padTop-3em {
+    margin-top: 3em;
+}
+
+.padBottom-1em {
+    margin-bottom: 1em;
+}
+
 
 /* ------ general html tags ------ */
 
@@ -205,5 +221,7 @@ nav {}
 /* article content */
 
 .articleContent {}
+
+.sideBar {}
 
 .
